# turny

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_RFID.md  build.rs  config.toml.example  flake.nix  reference.py  setup.sh  turny.service
docs/auth-proxy/: index.html
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/lib/: api.ts  playlists.ts  state.svelte.ts  types.ts  websocket.ts
frontend/src/lib/components/: AuthScreen.svelte  MappingEditor.svelte  MappingsList.svelte  NowPlaying.svelte  PlayerControls.svelte  Toast.svelte
frontend/src/routes/: +page.svelte
src/: audio.rs  cli.rs  lib.rs  main.rs  spotify_connect.rs  spotify_player.rs
src/app/: mod.rs
src/auth/: mod.rs
src/config/: mod.rs
src/hardware/: gpio.rs  mod.rs  rfid.rs
src/state/: mod.rs
src/web/: api.rs  db.rs  events.rs  mod.rs  spotify_api.rs
