[package]
name = "turny"
version = "0.1.0"
edition = "2021"

[dependencies]
# Spotify Web API
rspotify = { version = "0.13.2", features = ["client-reqwest"], default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Raspberry Pi GPIO
rppal = "0.17"

# RFID reader
mfrc522 = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections
hashbrown = "0.14"

# URL handling
url = "2.5"

# Base64 encoding
base64 = "0.22"

# Futures utilities
futures = "0.3"