[package]
name = "turny"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Raspberry Pi GPIO
rppal = "0.17"

# RFID reader
mfrc522 = "0.8"
linux-embedded-hal = "0.4"
embedded-hal = "1.0"
embedded-hal-bus = "0.2"

# Async runtime
tokio = { version = "1.35", features = ["full", "test-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections
hashbrown = "0.14"

# URL handling
url = "2.5"

# Base64 encoding
base64 = "0.22"

# Futures utilities
futures = "0.3"

# URL encoding
urlencoding = "2.1"

# Configuration parsing
toml = "0.8"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }



# Librespot - Spotify Connect integration
librespot = { version = "0.6", features = ["alsa-backend"] }
librespot-core = "0.6"
librespot-connect = "0.6"
librespot-playback = "0.6"
librespot-discovery = "0.6"
librespot-oauth = "0.6"